--- a/content/articles/how-to-deposit-mpesa-sportpesa.mdx
+++ b/content/articles/how-to-deposit-mpesa-sportpesa.mdx
@@ -1,14 +1,42 @@
 ---
-title: "How to Deposit via M-Pesa on SportPesa (Step-by-Step)"
-description: "Complete M-Pesa deposit guide for SportPesa. Paybill numbers, minimum deposits, and troubleshooting failed transactions."
-date: "2026-02-02"
-category: "Guides"
-tags: ["m-pesa", "deposit", "payments", "how-to"]
-author: "App Nyumbani"
+title: How to Deposit via M-Pesa on SportPesa (Step-by-Step)
+description: Complete M-Pesa deposit guide for SportPesa. Paybill numbers, minimum deposits, and troubleshooting failed transactions.
+date: '2026-02-02'
+author: App Nyumbani
 published: true
+metaTitle: 'How to Deposit M-Pesa on SportPesa: Paybill & Troubleshooting'
+metaDescription: Deposit to SportPesa via M-Pesa app or Paybill 955100. Step-by-step guide with troubleshooting for failed deposits.
+canonicalUrl: /i/how-to-deposit-mpesa-sportpesa
+keywords:
+- sportpesa mpesa deposit
+- sportpesa paybill
+- deposit sportpesa
+- mpesa sportpesa 955100
+articleType: guide
+category: guides
+tags:
+- m-pesa
+- deposit
+- payments
+- how-to
+sections:
+- id: via-app
+  heading: 'Method 1: Via App (Easiest)'
+  summary: Open SportPesa app, click Deposit, enter amount (min KSh 50), confirm M-Pesa prompt. Funds appear instantly.
+- id: via-mpesa-menu
+  heading: 'Method 2: Via M-Pesa Menu'
+  summary: Go to M-Pesa > Lipa na M-Pesa > Paybill. Paybill number 955100, account is your phone number, minimum KSh 50.
+- id: troubleshooting
+  heading: Troubleshooting Failed Deposits
+  summary: 'If money deducted but not in SportPesa: wait 5 min, check M-Pesa transaction ID, contact support. Refund within 24 hours.'
+relatedArticles:
+- buy-lottery-tickets-jackpot-kenya
+- sportpesa-registration-guide-2026
 ---
 
-## Method 1: Via App (Easiest)
+## Method 1: Via App (Easiest) {/*section:via-app*/}
+
+{/* Context: Open SportPesa app, click Deposit, enter amount (min KSh 50), confirm M-Pesa prompt. Funds appear instantly. */}
 
 **Step 1:** Open SportPesa app
 
@@ -20,7 +48,9 @@ published: true
 
 **Step 5:** Funds appear instantly
 
-## Method 2: Via M-Pesa Menu
+## Method 2: Via M-Pesa Menu {/*section:via-mpesa-menu*/}
+
+{/* Context: Go to M-Pesa > Lipa na M-Pesa > Paybill. Paybill number 955100, account is your phone number, minimum KSh 50. */}
 
 **Step 1:** Go to M-Pesa menu
 
@@ -37,7 +67,9 @@ published: true
 
 **Step 6:** Check SportPesa balance (updated in 1-2 minutes)
 
-## Troubleshooting Failed Deposits
+## Troubleshooting Failed Deposits {/*section:troubleshooting*/}
+
+{/* Context: If money deducted but not in SportPesa: wait 5 min, check M-Pesa transaction ID, contact support. Refund within 24 hours */}
 
 **Issue:** Money deducted but not in SportPesa account
 
