--- a/content/articles/sportpesa-registration-guide-2026.mdx
+++ b/content/articles/sportpesa-registration-guide-2026.mdx
@@ -1,21 +1,48 @@
 ---
-title: "How to Register on SportPesa: Complete 2026 Guide"
-description: "Step-by-step SportPesa registration. Create account, verify ID, make first deposit, and place your first jackpot bet."
-date: "2026-02-03"
-category: "Guides"
-tags: ["registration", "how-to", "beginners", "sportpesa"]
-author: "App Nyumbani"
+title: 'How to Register on SportPesa: Complete 2026 Guide'
+description: Step-by-step SportPesa registration. Create account, verify ID, make first deposit, and place your first jackpot bet.
+date: '2026-02-03'
+author: App Nyumbani
 published: true
+metaTitle: 'How to Register on SportPesa 2026: Step-by-Step Guide'
+metaDescription: Create your SportPesa account in minutes. Step-by-step registration, ID verification, M-Pesa deposit, and first jackpot bet guide.
+canonicalUrl: /i/sportpesa-registration-guide-2026
+keywords:
+- sportpesa registration
+- how to register sportpesa
+- sportpesa sign up
+- sportpesa account creation
+articleType: guide
+category: guides
+tags:
+- registration
+- how-to
+- beginners
+- sportpesa
+sections:
+- id: requirements
+  heading: Requirements
+  summary: 'Need: Kenyan phone number (Safaricom/Airtel/Telkom), valid ID or passport, age 18+, M-Pesa account.'
+- id: registration-steps
+  heading: Registration Steps
+  summary: '7 steps: visit sportpesa.com, click Register, enter phone/ID/DOB/password, verify SMS, complete KYC, deposit minimum KSh 50, start betting.'
+relatedArticles:
+- buy-lottery-tickets-jackpot-kenya
+- how-to-deposit-mpesa-sportpesa
 ---
 
-## Requirements
+## Requirements {/*section:requirements*/}
+
+{/* Context: Need: Kenyan phone number (Safaricom/Airtel/Telkom), valid ID or passport, age 18+, M-Pesa account. */}
 
 - Kenyan phone number (Safaricom, Airtel, or Telkom)
 - Valid ID or Passport
 - Age 18+
 - M-Pesa account
 
-## Registration Steps
+## Registration Steps {/*section:registration-steps*/}
+
+{/* Context: 7 steps: visit sportpesa.com, click Register, enter phone/ID/DOB/password, verify SMS, complete KYC, deposit minimum KSh */}
 
 **Step 1:** Visit sportpesa.com or download the app
 
