--- a/content/articles/what-to-do-jackpot-money.mdx
+++ b/content/articles/what-to-do-jackpot-money.mdx
@@ -1,24 +1,66 @@
 ---
-title: "What to Do If You Win the Jackpot: Complete Money Management Guide"
-description: "Tax planning, investment strategies, and financial mistakes to avoid after winning a multi-million shilling jackpot in Kenya."
-date: "2026-02-05"
-category: "Financial Planning"
-tags: ["money-management", "taxes", "investment", "winners"]
-author: "App Nyumbani"
+title: 'What to Do If You Win the Jackpot: Complete Money Management Guide'
+description: Tax planning, investment strategies, and financial mistakes to avoid after winning a multi-million shilling jackpot in Kenya.
+date: '2026-02-05'
+author: App Nyumbani
 published: true
+metaTitle: 'What to Do If You Win the Jackpot: Money Management Guide Kenya'
+metaDescription: '80% of winners go broke in 5 years. Plan: 5% tax, 50% preservation, 30% growth, 20% lifestyle. 90-day action plan for new winners.'
+canonicalUrl: /i/what-to-do-jackpot-money
+keywords:
+- what to do jackpot money
+- jackpot winner money management
+- jackpot tax kenya
+- jackpot investment plan
+articleType: guide
+category: finance
+tags:
+- money-management
+- taxes
+- investment
+- winners
+components:
+- name: MoneyPlanner
+  description: 'Interactive money planning tool for jackpot winners. Users input winning amount and see breakdown: 5% tax deduction, recommended allocation (50% preservation, 30% growth, 20% lifestyle),
+    estimated monthly passive income from investments, and comparison scenarios.'
+  section: you-just-won
+  placement: top
+sections:
+- id: you-just-won
+  heading: You Just Won the Jackpot. Now What?
+  summary: 80% of lottery winners go broke within 5 years. This guide prevents that. Use the calculator to plan finances before claiming.
+- id: first-90-days
+  heading: 'Step 6: Your First 90 Days Action Plan'
+  summary: 'Days 1-7: verify, screenshot, tell only spouse, don''t post on social media. Days 8-30: hire tax advisor, financial planner, lawyer. Days 31-60: claim, pay taxes, first investments. Days 61-90:
+    trust, will, insurance.'
+- id: bonnie-example
+  heading: 'Real Winner Example: How Bonnie Kamau Should Allocate KSh 424.6M'
+  summary: 'After 5% tax (KSh 403.4M): 50% preservation (KSh 201.7M in real estate, bonds, stocks = KSh 2-2.7M monthly passive income), 30% growth (KSh 121M in business, SACCOs), 20% lifestyle (KSh 80M
+    for home, emergency, family).'
+relatedArticles:
+- biggest-jackpot-wins-kenya
+- increase-chances-winning-sportpesa-jackpot
+- jackpot-winners-kenya
+- midweek-mega-jackpot-predictions
+- sportpesa-jackpot-winners-picks
+- ultimate-guide-sportpesa-jackpot
 ---
 
 <InteractiveWrapper fallbackAlt="Money planning tool for calculating tax, investment allocation, and passive income after a jackpot win">
   <MoneyPlanner />
 </InteractiveWrapper>
 
-## You Just Won the Jackpot. Now What?
+## You Just Won the Jackpot. Now What? {/*section:you-just-won*/}
+
+{/* Context: 80% of lottery winners go broke within 5 years. This guide prevents that. Use the calculator to plan finances before cla */}
 
 Winning a multi-million shilling jackpot is life-changing. But **80% of lottery winners go broke within 5 years**. This guide ensures you don't become that statistic.
 
 Use the calculator above to plan your post-win finances before claiming the money.
 
-## Step 1: Don't Tell Anyone (Yet)
+## Step 1: Don't Tell Anyone (Yet) {/*section:first-90-days*/}
+
+{/* Context: Days 1-7: verify, screenshot, tell only spouse, don't post on social media. Days 8-30: hire tax advisor, financial plann */}
 
 **The #1 mistake winners make:** Announcing their win publicly before having a plan.
 
@@ -33,7 +75,9 @@ Use the calculator above to plan your post-win finances before claiming the mone
 3. Wait 72 hours before telling anyone else
 4. Use that time to make a plan
 
-## Step 2: Understand the Tax
+## Step 2: Understand the Tax {/*section:bonnie-example*/}
+
+{/* Context: After 5% tax (KSh 403.4M): 50% preservation (KSh 201.7M in real estate, bonds, stocks = KSh 2-2.7M monthly passive incom */}
 
 Under Kenya's **Finance Act 2025** (effective July 1, 2025), taxation changed significantly:
 
