--- a/content/articles/jackpot-syndicate-guide.mdx
+++ b/content/articles/jackpot-syndicate-guide.mdx
@@ -1,18 +1,48 @@
 ---
-title: "How to Start a Jackpot Betting Syndicate in Kenya"
-description: "Step-by-step guide to creating and managing a jackpot syndicate. Pool resources, improve odds, and share winnings fairly."
-date: "2026-01-29"
-category: "Strategy"
-tags: ["syndicate", "group-betting", "pooling", "collaboration"]
-author: "App Nyumbani"
+title: How to Start a Jackpot Betting Syndicate in Kenya
+description: Step-by-step guide to creating and managing a jackpot syndicate. Pool resources, improve odds, and share winnings fairly.
+date: '2026-01-29'
+author: App Nyumbani
 published: true
+metaTitle: 'How to Start a Jackpot Betting Syndicate in Kenya: Complete Guide'
+metaDescription: 'Pool resources to improve collective odds. 10-person syndicate: KSh 100 each = 10 entries = 10x better odds. Step-by-step setup guide.'
+canonicalUrl: /i/jackpot-syndicate-guide
+keywords:
+- jackpot syndicate guide
+- start betting syndicate
+- group jackpot betting
+- syndicate setup kenya
+articleType: guide
+category: strategies
+tags:
+- syndicate
+- group-betting
+- pooling
+- collaboration
+sections:
+- id: what-is-syndicate
+  heading: What is a Jackpot Syndicate?
+  summary: A group of bettors who pool money to place multiple entries, improving collective odds.
+- id: math
+  heading: 'The Math: Why Syndicates Work'
+  summary: 'Solo: KSh 100/week, 1 entry, 1 in 129M odds. 10-person syndicate: KSh 1,000/week (KSh 100 each), 10 entries, 1 in 12.9M (10x better), split 10 ways.'
+- id: how-to-start
+  heading: How to Start One
+  summary: '5 steps: find 5-10 trusted people, agree on rules (contribution, split, decisions), set up M-Pesa collection, place bets weekly, track all entries transparently.'
+relatedArticles:
+- increase-chances-winning-sportpesa-jackpot
+- ultimate-guide-sportpesa-jackpot
 ---
 
-## What is a Jackpot Syndicate?
+## What is a Jackpot Syndicate? {/*section:what-is-syndicate*/}
+
+{/* Context: A group of bettors who pool money to place multiple entries, improving collective odds. */}
 
 A group of bettors who **pool money** to place multiple entries, improving collective odds.
 
-## The Math: Why Syndicates Work
+## The Math: Why Syndicates Work {/*section:math*/}
+
+{/* Context: Solo: KSh 100/week, 1 entry, 1 in 129M odds. 10-person syndicate: KSh 1,000/week (KSh 100 each), 10 entries, 1 in 12.9M  */}
 
 **Solo Bettor:**
 - Budget: KSh 100/week
@@ -25,7 +55,9 @@ A group of bettors who **pool money** to place multiple entries, improving colle
 - Odds: 1 in 12.9M (10× better)
 - Prize split: 10 ways
 
-## How to Start One
+## How to Start One {/*section:how-to-start*/}
+
+{/* Context: 5 steps: find 5-10 trusted people, agree on rules (contribution, split, decisions), set up M-Pesa collection, place bets */}
 
 **Step 1:** Find 5-10 trusted friends/colleagues
 **Step 2:** Agree on rules (contribution, split, decision-making)
