--- a/content/articles/sportpesa-jackpot-tax-guide-2026.mdx
+++ b/content/articles/sportpesa-jackpot-tax-guide-2026.mdx
@@ -1,18 +1,48 @@
 ---
-title: "SportPesa Jackpot Tax Guide 2026: What Winners Pay"
-description: "Complete guide to jackpot taxation in Kenya. Understand the 5% withdrawal tax, how it's calculated, and what you actually take home."
-date: "2026-01-30"
-category: "Finance"
-tags: ["tax", "finance", "winnings", "legal"]
-author: "App Nyumbani"
+title: 'SportPesa Jackpot Tax Guide 2026: What Winners Pay'
+description: Complete guide to jackpot taxation in Kenya. Understand the 5% withdrawal tax, how it's calculated, and what you actually take home.
+date: '2026-01-30'
+author: App Nyumbani
 published: true
+metaTitle: 'SportPesa Jackpot Tax Guide 2026: 5% Withdrawal Tax Explained'
+metaDescription: 'Kenya jackpot tax: 5% on all withdrawals (down from 20%). KSh 200M win = KSh 10M tax, take home KSh 190M. Complete calculation guide.'
+canonicalUrl: /i/sportpesa-jackpot-tax-guide-2026
+keywords:
+- jackpot tax kenya
+- sportpesa tax 2026
+- betting tax kenya
+- 5% withdrawal tax betting
+articleType: reference
+category: finance
+tags:
+- tax
+- finance
+- winnings
+- legal
+sections:
+- id: taxation-2026
+  heading: Jackpot Taxation in Kenya (2026)
+  summary: As of July 2025, Kenya uses 5% withdrawal tax system (down from 20% on net winnings).
+- id: how-it-works
+  heading: How the 5% Tax Works
+  summary: 'Applied on ALL withdrawals regardless of amount. KSh 200M win: 5% tax = KSh 10M, net to M-Pesa = KSh 190M.'
+- id: old-vs-new
+  heading: Old vs New System
+  summary: 'Before July 2025: 20% on net = KSh 40M tax on KSh 200M. After: 5% on all = KSh 10M. Savings: KSh 30M.'
+relatedArticles:
+- biggest-jackpot-wins-kenya
+- what-to-do-jackpot-money
 ---
 
-## Jackpot Taxation in Kenya (2026)
+## Jackpot Taxation in Kenya (2026) {/*section:taxation-2026*/}
+
+{/* Context: As of July 2025, Kenya uses 5% withdrawal tax system (down from 20% on net winnings). */}
 
 As of July 2025, Kenya uses a **5% withdrawal tax** system (down from 20%).
 
-## How the 5% Tax Works
+## How the 5% Tax Works {/*section:how-it-works*/}
+
+{/* Context: Applied on ALL withdrawals regardless of amount. KSh 200M win: 5% tax = KSh 10M, net to M-Pesa = KSh 190M. */}
 
 **On ALL withdrawals**, regardless of amount:
 
@@ -21,7 +51,9 @@ As of July 2025, Kenya uses a **5% withdrawal tax** system (down from 20%).
 - Withdrawal tax (5%): KSh 10,000,000
 - **Net to M-Pesa: KSh 190,000,000**
 
-## Old vs New System
+## Old vs New System {/*section:old-vs-new*/}
+
+{/* Context: Before July 2025: 20% on net = KSh 40M tax on KSh 200M. After: 5% on all = KSh 10M. Savings: KSh 30M. */}
 
 **Before July 2025 (20% on net):**
 - KSh 200M win = KSh 40M tax
